--- a/api/app/views/youtube/index.html.erb
+++ b/api/app/views/youtube/index.html.erb
@@ -3,7 +3,7 @@
   <%= label_tag(:url, "Youtube URL:") %>
   <%= text_field_tag(:url) %>
   <%= check_box_tag 'is_audio' %>
-  <%= submit_tag("Download") %>
+  <%= button_tag("Download", class: "waves-effect waves-light btn") %>
 <% end %>
 
 <table>
