Add mobile navigation

--- a/api/app/views/layouts/application.html.erb
+++ b/api/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <!-- beginning of new code -->
   <nav>
     <div class="nav-wrapper blue-grey darken-1">
+      <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <a href="#" class="brand-logo center">Tools</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><%= link_to 'Main', '/' %></li>
@@ -21,6 +22,14 @@
       </ul>
     </div>
   </nav>
+  <ul id="slide-out" class="sidenav">
+    <li><div class="user-view">
+      <a href="#name"><span class=" name"><%= current_user&.username %></span></a>
+      <a href="#email"><span class="email"><%= current_user&.email %></span></a>
+    </div></li>
+    <li><a href="/youtube"><i class="material-icons">videocam</i>Youtube Video</a></li>
+  </ul>
+
   <!-- end of new code -->
 
   <div class="container">  <!-- newly added code -->
